--- a/style.css
+++ b/style.css
@@ -16,23 +16,22 @@
 }
 
 html {
-    font-size: 18px;
     scroll-behavior: smooth;
+   /*text-size-adjust: none;*/
 }
 
 body {
     font-family: EBGaramond, sans-serif;
     text-align: center;
-    padding: 2rem;
+    margin: 0 auto;
+    max-width: 800px;
     display: flex;
     flex-direction: column;
 }
 
-nav {
-    font-size: 1.5rem;
-    margin: 1rem 0;
-}
-
+@media (min-width: 640px) { html {font-size: 16px;} }
+@media (min-width:960px) { html {font-size: 18px;} }
+@media (min-width:1100px) { html {font-size: 18px;} }
 
 .title {
     font-family: Vanitas, sans-serif;
@@ -52,56 +51,52 @@ nav {
     align-self: center;
     display: block;
     width: 100%;
-    margin: 2rem 0 0 0;
+    max-width: 800px;
     box-sizing: border-box;
     border: 8px solid rgb(255, 255, 255);
     box-shadow: rgba(0, 0, 0, 0.25) 0 1px 4px;
 }
 
+.initial-photo {
+    max-height: calc(100vh - 13rem);
+}
+
 nav {
-    padding: 20px;
+    font-size: 1.25rem;
+    margin: 1rem 0;
     display: flex;
     text-align: center;
     justify-content: space-around;
-}
-
-nav div {
-    flex-shrink: 1;
-    flex-grow: 4;
+    flex-wrap: wrap;
 }
 
 nav a {
-    margin: 0 5px;
+    margin: 0.5rem;
     font-weight: 400;
     font-style: normal;
     text-decoration: none;
     color: rgb(0, 0, 0);
     text-transform: uppercase;
+    flex-shrink: 0;
+    flex-grow: 1;
 }
 
 a:hover {
     color: #6b6e6d;
 }
 
-nav a {
-    flex-shrink: 0;
-    flex-grow: 1;
-    text-transform: uppercase;
-}
 
 .dear-friends {
-    font-size: 2rem;
+    font-size: 1.75rem;
     margin-bottom: 1rem;
 }
 
 .invitation {
-    font-size: 1rem;
     margin: 1em 0;
 }
 
-
 .date {
-    margin: 4rem 0 0 0;
+    margin: 1rem 0 0 0;
     font-weight: bold;
     text-transform: uppercase;
 }
@@ -122,15 +117,21 @@ nav a {
     margin: 2rem;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    font-size: 2rem;
+    text-align: start;
+    justify-content: space-around;
 }
+
+.schedule-list-header {
+    font-weight: bold;
+    text-align: center;
+}
+
 .schedule-list div {
-    margin: 0.5rem;
+    margin: 0.25rem;
 }
 
 .separator {
-    padding: 2rem 0;
+    padding: 1rem 0;
     border-bottom: black 3px solid;
 }
 
@@ -141,15 +142,15 @@ nav a {
 }
 
 .section .sub_header {
-    font-size: 2.25rem;
+    font-size: 1.5rem;
     line-height: 1.6;
     margin: 1em 0;
 }
 
 .section_header {
-    padding: 2rem;
+    padding: 1rem;
     margin: 1rem 0;
-    font-size: 3rem;
+    font-size: 2rem;
     border-bottom: black 3px solid;
 }
 
@@ -167,30 +168,28 @@ nav a {
 }
 
 .circle:nth-of-type(1) {
-    background: aquamarine;
+    background: rgb(103, 75, 65);
 }
 
 .circle:nth-of-type(2) {
-    background: #7faaff;
+    background: rgb(186, 158, 138);
 }
 
 .circle:nth-of-type(3) {
-    background: #ff7fb0;
+    background: rgb(121, 80, 63);
 }
 
-
 .circle:nth-of-type(4) {
-    background: #ffee7f;
+    background: rgb(163, 139, 122);
 }
 
 .circle:nth-of-type(5) {
-    background: #9bff7f;
+    background: rgb(24, 23, 17);
 }
 
  #info + .sub_header {
     font-weight: bold;
 }
-
 
 .portrait-circle {
     height: 15rem;
@@ -221,7 +220,7 @@ nav a {
 }
 
 .contact {
-    font-size: 1.75rem;
+    font-size: 1.25rem;
 }
 
 .contact .sub_header {
