--- a/style.css
+++ b/style.css
@@ -83,9 +83,33 @@ nav a {
     flex-grow: 1;
 }
 
-a:hover {
+nav a:hover {
     color: #6b6e6d;
 }
+
+.button_link {
+    color: white;
+    text-decoration: none;
+
+    padding: 0.75rem 1.5rem;
+    background-position: center center;
+    background-color: #000000;
+    border-style: solid;
+    transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
+}
+
+.button_link.place {
+    margin-top: 1.5rem;
+}
+
+.button_link.contact {
+    margin-top: 1.5rem;
+}
+
+.button_link.upload {
+    margin-bottom: 1.5rem;
+}
+
 
 
 .dear-friends {
@@ -126,6 +150,11 @@ a:hover {
     margin: 0.25rem;
 }
 
+.meet-description {
+    text-align: left;
+    margin: 0.5rem;
+}
+
 .separator {
     padding: 1rem 0;
     border-bottom: black 3px solid;
@@ -145,8 +174,8 @@ a:hover {
 
 .section_header {
     padding: 1rem;
-    margin-bottom: 2rem;
-    font-size: 2rem;
+    margin-bottom: 1.6rem;
+    font-size: 1.6rem;
     border-bottom: black 3px solid;
 }
 
@@ -207,6 +236,7 @@ a:hover {
 }
 
 .plane-departure:nth-of-type(2) {
+    margin-top: 2rem;
     transform: rotateY(180grad);
 }
 
@@ -220,6 +250,8 @@ a:hover {
 
 .contact {
     font-size: 1.25rem;
+    display: flex;
+    flex-direction: column;
 }
 
 .contact .sub_header {
