--- a/style.css
+++ b/style.css
@@ -88,12 +88,11 @@ nav a:hover {
 }
 
 .button_link {
-    color: white;
     text-decoration: none;
-
     padding: 0.75rem 1.5rem;
+    border-width: 1px;
     background-position: center center;
-    background-color: #000000;
+    border-color: #000000;
     border-style: solid;
     transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 }
