--- a/style.css
+++ b/style.css
@@ -90,7 +90,8 @@ nav a:hover {
 .button_link {
     text-decoration: none;
     padding: 0.75rem 1.5rem;
-    border-width: 1px;
+    border-width: 3px;
+    color: #000000;
     background-position: center center;
     border-color: #000000;
     border-style: solid;
