--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 html {
     scroll-behavior: smooth;
     text-size-adjust: none;
-    font-size: 50px;
+    font-size: 26px;
     -webkit-text-size-adjust:none;
 }
 
@@ -29,8 +29,46 @@ body {
     display: flex;
     flex-direction: column;
     padding: 1.5rem;
+    animation: fadeIn 3s ease;
 }
 
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+        transform: scale(0.8, 0.8);
+    }
+    100% {
+        opacity: 1;
+        transform: scale(1, 1);
+    }
+}
+
+.primary-content {
+    display: block;
+}
+.fallback-content {
+    display: none;
+}
+
+
+@media (min-width: 900px) and (orientation: landscape)
+{
+    .fallback-content {
+        display: flex;
+        flex-direction: column;
+        width: calc((100vh - 15rem)*1.5);
+        align-self: center;
+    }
+
+    .primary-content {
+        display: none;
+    }
+
+    body {
+        font-size: 40px;
+    }
+}
 
 .title {
     font-family: Vanitas, sans-serif;
@@ -219,8 +257,8 @@ nav a:hover {
 }
 
 .portrait-circle {
-    height: 12rem;
-    width: 12rem;
+    height: 9rem;
+    width: 9rem;
     border-radius: 50%;
     overflow: hidden;
     margin: 1rem;
