--- a/style.css
+++ b/style.css
@@ -28,7 +28,8 @@ body {
     margin: 0 auto;
     display: flex;
     flex-direction: column;
-    padding: 1.5rem;
+    padding: 1rem;
+    line-height: 1.5;
 }
 
 
@@ -81,7 +82,7 @@ body {
     max-width: 100%;
     max-height: 100%;
     box-sizing: border-box;
-    border: 8px solid rgb(255, 255, 255);
+    border: 0.2rem solid rgb(255, 255, 255);
     box-shadow: rgba(0, 0, 0, 0.25) 0 1px 4px;
 }
 
@@ -120,7 +121,7 @@ nav a:hover {
 .button_link {
     text-decoration: none;
     padding: 0.75rem 1.5rem;
-    border-width: 3px;
+    border-width: 2px;
     color: #000000;
     background-position: center center;
     border-color: #000000;
@@ -139,8 +140,8 @@ nav a:hover {
 .button_link.upload {
     margin-bottom: 1.5rem;
     padding: 0.75rem;
+    text-wrap: balance
 }
-
 
 
 .dear-friends {
@@ -178,17 +179,17 @@ nav a:hover {
 }
 
 .schedule-list div {
-    margin: 0.25rem;
+    line-height: 2;
 }
 
 .meet-description {
     text-align: left;
-    margin: 0.5rem;
+    margin: 1.5rem 0 0 0;
 }
 
 .separator {
     padding: 1rem 0;
-    border-bottom: black 3px solid;
+    border-bottom: black 2px solid;
 }
 
 .section {
@@ -207,45 +208,78 @@ nav a:hover {
     padding: 1rem;
     margin-bottom: 1.6rem;
     font-size: 1.6rem;
-    border-bottom: black 3px solid;
+    border-bottom: black 2px solid;
 }
 
 .color-palette {
     display: flex;
     margin: 1rem;
     justify-content: center;
+
+    .circle {
+        width: calc((100vw - 6.4rem) / 5);
+        height: calc((100vw - 6.4rem) / 5);
+        max-height: 2rem;
+        max-width: 2rem;
+        border-radius: 50%;
+        margin-right: 0.35rem;
+    }
+    .circle:last-of-type {
+        margin-right: 0;
+    }
+}
+.color-palette.women {
+    .circle:nth-of-type(1) {
+        background: rgb(205, 184, 171);
+    }
+
+    .circle:nth-of-type(2) {
+        background: rgb(186, 158, 138);
+    }
+
+    .circle:nth-of-type(3) {
+        background: rgb(163, 139, 122);
+    }
+
+    .circle:nth-of-type(4) {
+        background: rgb(121, 80, 63);
+    }
+
+    .circle:nth-of-type(5) {
+        background: rgb(103, 75, 65);
+    }
+
+     .circle:nth-of-type(6) {
+        background: rgb(24, 23, 17);
+    }
 }
 
-.circle {
-    width: calc((100vw - 6.4rem) / 5);
-    height: calc((100vw - 6.4rem) / 5);
-    max-height: 2rem;
-    max-width: 2rem;
-    border-radius: 50%;
-    border: white 2px solid;
-    margin-right: 0.35rem;
+.color-palette.men {
+    .circle:nth-of-type(1) {
+        border: rgb(226, 218, 209) 1px solid;
+        background: rgb(255, 255, 255);
+    }
+    .circle:nth-of-type(2) {
+        background: rgb(233, 232, 229);
+    }
+    .circle:nth-of-type(3) {
+        background: rgb(236, 231, 222);
+    }
+    .circle:nth-of-type(4) {
+        background: rgb(225, 215, 208);
+    }
 }
 
-.circle:nth-of-type(1) {
-    background: rgb(103, 75, 65);
+.color-palette-header {
+    font-size: 1.25rem;
+    padding: 0.25rem 1rem;
+    margin: 1rem 0;
 }
 
-.circle:nth-of-type(2) {
-    background: rgb(186, 158, 138);
+.color-palette-description {
+    text-wrap: balance;
 }
 
-.circle:nth-of-type(3) {
-    background: rgb(121, 80, 63);
-}
-
-.circle:nth-of-type(4) {
-    background: rgb(163, 139, 122);
-}
-
-.circle:nth-of-type(5) {
-    background: rgb(24, 23, 17);
-    margin-right: 0;
-}
 
  #info + .sub_header {
     font-weight: bold;
